--- a/style.css
+++ b/style.css
@@ -56,3 +56,18 @@ button:active {
   background-color: white;
   color: cadetblue;
 }
+#copy-container {
+  text-align: center;
+  margin: 50px;
+}
+
+#text-to-copy {
+  padding: 10px;
+  border: 1px solid #ccc;
+  margin-bottom: 10px;
+}
+
+#copy-button {
+  padding: 10px;
+  cursor: pointer;
+}
